[gd_scene load_steps=4 format=3 uid="uid://cl5i6jqism35s"]

[ext_resource type="Script" uid="uid://c2bq01dxk51eb" path="res://levels/basic_level/basic_level.gd" id="1_x83mk"]
[ext_resource type="PackedScene" uid="uid://emqcm546jpvb" path="res://levels/grid/grid.tscn" id="2_h6lqb"]
[ext_resource type="PackedScene" uid="uid://c7t5icwhp12gx" path="res://levels/menus/hud/hud.tscn" id="3_akcht"]

[node name="BasicLevel" type="Node2D"]
script = ExtResource("1_x83mk")

[node name="Lanes" type="Node" parent="."]

[node name="1" type="Node" parent="Lanes"]

[node name="2" type="Node" parent="Lanes"]

[node name="3" type="Node" parent="Lanes"]

[node name="4" type="Node" parent="Lanes"]

[node name="5" type="Node" parent="Lanes"]

[node name="Grid" parent="." instance=ExtResource("2_h6lqb")]
position = Vector2(89.00001, 198)
scale = Vector2(84.193245, 42.096622)

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="Towers" type="Node" parent="."]

[node name="Hud" parent="." instance=ExtResource("3_akcht")]
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="clicked_on_grid" from="Grid" to="." method="_on_grid_clicked_on_grid"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]

[editable path="Hud"]
